//tracker.nci.nih.gov/browse/OCECTS-333 - Fixed spacing and active link issues

--- a/CancerGov/_src/StyleSheets/_pagination.scss
+++ b/CancerGov/_src/StyleSheets/_pagination.scss
@@ -9,7 +9,7 @@
     font-weight: normal;
     text-decoration: none;
   }
-  .pager-link {
+  .pager-link:link, .pager-link:active {
     text-decoration: none;
   }
   .pager-current, .pager-link:hover {
