--- a/CancerGov/_src/StyleSheets/enhancements/_cts.basic.scss
+++ b/CancerGov/_src/StyleSheets/enhancements/_cts.basic.scss
@@ -206,9 +206,6 @@ a {
 }
 /* Counter / pager styles above listing body*/
 .ct-listing-util-top  {
-  .ct-listing-pager {
-    margin-top: -3px;
-  }
   hr {
     margin-top: 32px;
     margin-bottom: 0px;
